<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/name_view"
        android:padding="16dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#757575"
        android:textAllCaps="true"
        android:paddingBottom="10dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hasWhippedCream"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:onClick="whippedCreamCheckBox"
        android:textSize="16sp"
        android:text="@string/whipped_cream"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hasChoclate"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:onClick="choclateCheckBox"
        android:textSize="16sp"
        android:text="@string/chocolate"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#757575"
        android:paddingTop="8dp"
        android:textAllCaps="true"
        android:paddingBottom="10dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            android:onClick="increment"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:padding="16dp"
            android:id="@+id/quantity_text_view"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:paddingBottom="10dp"
            android:textColor="#000"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:onClick="decrement"
            android:textSize="24sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#757575"
        android:textAllCaps="true"
        android:paddingBottom="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0"
        android:id="@+id/price_text_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingBottom="10dp"
        android:textColor="#000"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitOrder"
        android:text="@string/order"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

</LinearLayout>